--- a/view/admin/order.ejs
+++ b/view/admin/order.ejs
@@ -47,19 +47,7 @@
                   <p><%= element.foodDetails[0].foodname %></p>
                </td>
                <td>
-                  <ul class="list-unstyled text-start m-auto" style="max-width: 200px;">
-                     <% if (element.foodDetails[0].offer > element.categoryDetails[0].offer) { %>
-                     <li><%= element.items.quantity*(element.rateDetails[0].rate + element.rateDetails[0].rate*element.rateDetails[0].gst_per/100 +
-                      element.rateDetails[0].rate * element.rateDetails[0].packing_per/100 +
-                      element.rateDetails[0].rate * element.rateDetails[0].delivery_per/100 -
-                      element.rateDetails[0].rate * element.foodDetails[0].offer/100) %></li>
-                     <% } else { %>
-                     <li><%= element.items.quantity*(element.rateDetails[0].rate + element.rateDetails[0].rate*element.rateDetails[0].gst_per/100 +
-                           element.rateDetails[0].rate * element.rateDetails[0].packing_per/100 +
-                           element.rateDetails[0].rate * element.rateDetails[0].delivery_per/100 -
-                           element.rateDetails[0].rate * element.categoryDetails[0].offer/100) %></li>
-                     <% } %>
-                  </ul>
+                 <%= element.items.quantity * (element.items.rate+element.items.rate*element.items.gst_per/100+element.items.rate*element.items.packing_per/100+element.items.rate*element.items.offer_per/100) %>
                </td>
 
                <td>
@@ -80,6 +68,8 @@
                         aria-expanded="false">
                         <%= element.items.status %>
                      </button>
+
+                     
                      <% if (element.items.status === "cancelled" || element.items.status === "delivered" || element.items.status === "waiting for approval" || element.items.status === "returned") { %>
                      <!-- Dropdown hidden for 'cancelled' and 'delivered' -->
                      <ul class="dropdown-menu d-none">
