--- a/view/admin/partials/admin.ejs
+++ b/view/admin/partials/admin.ejs
@@ -18,7 +18,7 @@
   <style>
     :root {
       --primary-color: #2563eb;
-      --sidebar-width: 280px;
+      --sidebar-width: 320px;
       --header-height: 70px;
     }
 
@@ -30,14 +30,12 @@
     }
 
     .sidebar {
-      height: 100vh;
-      width: var(--sidebar-width);
-      position: fixed;
+   
+      width:100%;
       background: white;
       color: #1e293b;
       padding-top: 1rem;
       box-shadow: 2px 0 8px rgba(0, 0, 0, 0.05);
-      overflow-y: auto;
       transition: transform 0.3s ease;
       top: 53px;
     }
@@ -64,9 +62,7 @@
       color: #1e293b;
     }
 
-    .nav-item {
-      margin: 0.25rem 0.75rem;
-    }
+   
 
     .nav-link {
       display: flex;
@@ -273,6 +269,11 @@
           <i class="fas fa-undo"></i>
           Return Order Management
         </a>
+        <div class="nav-item" style="margin-left:-3px">
+          <a href="/admin/delivery" class="nav-link">
+            <i class="bi bi-truck"></i>
+            Delivery Fee Management
+          </a>
       </div>
     </nav>
   </div>
